--- a/.github/workflows/fist-workflow.yaml
+++ b/.github/workflows/fist-workflow.yaml
@@ -11,3 +11,15 @@ jobs:
           run: |
             node -v
             node npm
+  parallel-job-macos:
+    runs-on: macos-latest
+    steps:
+      - name: View SW Version
+        run: sw_vers
+  dependant-job:
+    runs-on: windows-latest
+    steps:
+      - name: echo string
+        run: Write-Output "Windows String"
+      - name: Error Step
+        run: doesnotexist
