--- a/.github/workflows/fist-workflow.yaml
+++ b/.github/workflows/fist-workflow.yaml
@@ -10,7 +10,7 @@ jobs:
         - name: Multiline command
           run: |
             node -v
-            node npm
+            npm -v
   parallel-job-macos:
     runs-on: macos-latest
     steps:
