--- a/.github/workflows/fist-workflow.yaml
+++ b/.github/workflows/fist-workflow.yaml
@@ -23,4 +23,4 @@ jobs:
       - name: echo string
         run: Write-Output "Windows String"
       - name: Error Step
-        run: doesnotexist
+        run: doesnotexistss
